2007-07-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* COPYING:
	* gaupol/*.py:
	* gaupol/gtk/dialogs/about.py:
	Upgrade license to GPL v3 or later.

2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/main.py (_init_application):
	Update GUI after selecting video file.

2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/gaupol.1:
	* gaupol/gtk/main.py:
	Rearrange the order in which options are listed.

2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/gaupol.1:
	* gaupol/gtk/agents/open.py:
	* gaupol/gtk/main.py:
	Add option --adapt-translation.

2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/search.py (_set_pattern):
	Get value of ignore_case from conf rather than the widget.

2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/search-dialog.glade:
	* gaupol/gtk/dialogs/search.py:
	Set search_vbox unsensitive if no target columns.

2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/search.py (find_next, find_previous):
	If document is None, get document from self._docs.

2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/open.py (_adapt_translations):
	Fix IndexError with m being too large.

2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/framerate.py (_init_values):
	Use page.project.framerate as the default input value.

2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/duration-dialog.glade:
	Set sensible adjustments to spin buttons.

2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/split.py:
	(_shift_destination): Fix shift amount sign.
	(_split_project): Set subtitles to project, not page.

2007-06-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/transform.py:
	Update references to renamed variables and methods.

2007-06-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/subtitle.py (shift_positions):
	Allow negative positions as a result.

2007-06-29  Osmo Salomaa  <otsaloma@cc.hut.fi>
